--- a/app_main/build.gradle
+++ b/app_main/build.gradle
@@ -14,7 +14,7 @@ android {
 
 dependencies {
     // Project
-    implementation project(':common')
+    compileOnly project(':common')
     // Router
     kapt "com.github.ITGungnir.GRouter:router_compiler:$router_version"
 }
