--- a/config.gradle
+++ b/config.gradle
@@ -1,39 +1,39 @@
 ext {
     // Build
-    gradle_version = '3.4.1'
+    gradle_version = '3.5.2'
     target_sdk_version = 28
     build_tools_version = '28.0.3'
     min_sdk_version = 19
     version_code = 6
     version_name = '1.2.2'
     // Kotlin
-    kotlin_version = '1.3.31'
-    anko_version = '0.10.8'
+    kotlin_version = '1.3.50'
     // Support
-    appcompat_version = '1.0.2'
+    appcompat_version = '1.1.0'
     material_version = '1.0.0'
     recyclerview_version = '1.0.0'
     constraintlayout_version = '1.1.3'
     // Network
-    okhttp_version = '3.12.0'
-    retrofit_version = '2.5.0'
+    okhttp_version = '4.2.2'
+    retrofit_version = '2.6.2'
     // ReactiveX
-    rxjava_version = '2.2.4'
+    rxjava_version = '2.2.14'
     rxandroid_version = '2.1.1'
     rxbinding_version = '2.2.0'
     // Glide
-    glide_version = '4.8.0'
-    glide_trans_version = '3.3.0'
+    glide_version = '4.9.0'
+    glide_compiler_version = '4.9.0'
+    glide_tranforms_version = '4.1.0'
     // Widgets
     flex_version = '1.0.0'
     // ITGungnir
-    uikit_version = '1.0.5'
-    rxmvvm_version = '1.3.0'
-    router_version = '1.1.0'
-    permission_version = '0.1.0'
+    rxmvvm_version = '1.6.0'
+    router_version = '1.1.2'
+    permission_version = '0.6.0'
+    adapter_version = '1.0.1'
     // Tools
-    joda_version = '2.10.1'
-    gson_version = '2.8.5'
+    joda_version = '2.10.5'
+    gson_version = '2.8.6'
     logger_version = '2.2.0'
     dex_version = '2.0.1'
     bugly_sdk_version = '2.8.6.0'
