--- a/app_support/build.gradle
+++ b/app_support/build.gradle
@@ -14,7 +14,7 @@ android {
 
 dependencies {
     // Project
-    compileOnly project(':common')
+    implementation project(':common')
     // Router
     kapt "com.github.ITGungnir.GRouter:router_compiler:$router_version"
 }
