--- a/common/build.gradle
+++ b/common/build.gradle
@@ -9,6 +9,8 @@ android {
     defaultConfig {
         minSdkVersion min_sdk_version
         targetSdkVersion target_sdk_version
+        versionCode version_code
+        versionName version_name
     }
 }
 
