--- a/config.gradle
+++ b/config.gradle
@@ -1,11 +1,12 @@
 ext {
+    // Version
+    version_code = 6
+    version_name = '1.2.2'
     // Build
     gradle_version = '3.5.2'
     target_sdk_version = 28
     build_tools_version = '28.0.3'
-    min_sdk_version = 19
-    version_code = 6
-    version_name = '1.2.2'
+    min_sdk_version = 21
     // Kotlin
     kotlin_version = '1.3.50'
     anko_version = '0.10.8'
