--- a/config.gradle
+++ b/config.gradle
@@ -2,6 +2,9 @@ ext {
     // Version
     version_code = 6
     version_name = '1.2.2'
+    // System configs
+    screen_width = '375F'
+    use_system_sp = 'false'
     // Build
     gradle_version = '3.5.2'
     target_sdk_version = 28
