--- a/common/build.gradle
+++ b/common/build.gradle
@@ -19,48 +19,14 @@ android {
 }
 
 dependencies {
-    // Kotlin
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api "org.jetbrains.kotlin:kotlin-android-extensions-runtime:$kotlin_version"
-    api "org.jetbrains.anko:anko-sdk25:$anko_version"
-    api "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
-    // Support
-    api "androidx.appcompat:appcompat:$appcompat_version"
-    api "com.google.android.material:material:$material_version"
-    api "androidx.recyclerview:recyclerview:$recyclerview_version"
-    api "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
-    // Network
-    api "com.squareup.okhttp3:okhttp:$okhttp_version"
-    api "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
-    api "com.squareup.retrofit2:retrofit:$retrofit_version"
-    api "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    api "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    // ReactiveX
-    api "io.reactivex.rxjava2:rxjava:$rxjava_version"
-    api "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
-    api "com.jakewharton.rxbinding2:rxbinding:$rxbinding_version"
-    // Glide
-    api "com.github.bumptech.glide:glide:$glide_version"
-    kapt "com.github.bumptech.glide:compiler:$glide_compiler_version"
-    api "jp.wasabeef:glide-transformations:$glide_tranforms_version"
-    // Widgets
-    api "com.google.android:flexbox:$flex_version"
-    api "com.scwang.smart:refresh-layout-kernel:$refresh_version"
-    api "com.scwang.smart:refresh-header-classics:$refresh_version"
-    api "com.scwang.smart:refresh-footer-classics:$refresh_version"
-    implementation "com.just.agentweb:agentweb:$agent_web_version"
+    // Projects
+    api project(':common-http')
+    api project(':common-util')
+    api project(':common-widget')
     // ITGungnir
     api "com.github.ITGungnir:RxMVVM:$rxmvvm_version"
+    api "com.github.ITGungnir:GAdapter:$adapter_version"
     api "com.github.ITGungnir.GRouter:router_api:$router_version"
     api "com.github.ITGungnir:GPermission:$permission_version"
     api "com.github.ITGungnir:GAdapter:$adapter_version"
-    // Tools
-    api "net.danlew:android.joda:$joda_version"
-    api "com.google.code.gson:gson:$gson_version"
-    implementation "com.orhanobut:logger:$logger_version"
-    api "androidx.multidex:multidex:$dex_version"
-    api "com.tencent.bugly:crashreport:$bugly_sdk_version"
-    debugApi "com.squareup.leakcanary:leakcanary-android:$leak_canary_version"
-    debugApi "com.squareup.leakcanary:leakcanary-support-fragment:$leak_canary_version"
-    releaseApi "com.squareup.leakcanary:leakcanary-android-no-op:$leak_canary_version"
 }
